--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "siddhu-vydyabhushana-website",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -17,11 +17,14 @@
   "dependencies": {
     "@docusaurus/core": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
+    "@docusaurus/theme-common": "^2.1.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
+    "framer-motion": "^6.5.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-type-animation": "^2.1.2"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.1.0",
